--- a/src/style.css
+++ b/src/style.css
@@ -74,3 +74,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+table {
+  width: 50%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: center;
+}
